Added links and started adding pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
-  <h2 class="centered">World Literature - IoBE Final Project</h2>
+  <div class="menubar">
+    <ul>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project">Home</a></li>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/appearance">Importance of Appearances</a></li>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/family">Importance of Family History</a></li>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/hypocrisy">Hypocrisy in Society</a></li>
+    </ul>
+  </div>
+
+  <div class="content">
+    <h2 class="centered">World Literature - IoBE Final Project</h>
+  </div>
 </body>
 </html>
