--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>World Literature - IoBE Final Project</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
-  <script src="script.js"/>
+  <script src="script.js"></script>
 </head>
 
 <body>
