Added style for pages, added content to appearance page

--- a/appearance/index.html
+++ b/appearance/index.html
@@ -2,9 +2,29 @@
 <html>
 <head>
   <title>Importance of Appearances</title>
+  <link rel="stylesheet" type="text/css" href="../style2.css"/>
 </head>
 
 <body>
-  <p>Testing...</p>
+
+  <div class="menubar">
+    <ul>
+      <li id="home"><a href="https://ben-klemp.github.io/IoBE_Final_Project">Home</a></li>
+      <li><a href="./appearance/index.html">Importance of Appearances</a></li>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/family">Importance of Family History</a></li>
+      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/hypocrisy">Hypocrisy in Society</a></li>
+      <!-- https://ben-klemp.github.io/IoBE_Final_Project/appearance -->
+    </ul>
+  </div>
+
+  <div class="content">
+    <br>
+    <h2 class="centered">Importance of Appearance</h2>
+    <br>
+    <p>  Many characters in the book make their decisions off of nothing but appearance or other superficials.  For example, both Gwendolen and Cecily pick who they want to get married to purely based off of the fact that they like the name Ernest.  Gwendolen mentions this directly to Jack (who she thinks is named Ernest).  “The moment Algernon first mentioned to me that he had a friend called Ernest, I knew I was destined to love you.”(41)  Cecily says the same to Algernon (who she believes is Ernest).  “it had always been a girlish dream of mine to love some one whose name was Ernest.”(76)  Even after this ruse falls flat, the women don’t really care that they were fooled, they just want their fiancés to be named Ernest.</p>
+    <p>  The importance of appearance is also shown in Lady Bracknell’s conversation with Jack, following his proposal to Gwendolen.  She is unhappy that Jack has a house on the ‘unfashionable side’ of Belgrave Square.  Also in this conversation, she requests that Jack produce some parents, so that she won’t have Gwendolen “marry into a cloak-room, and form an alliance with a parcel.”  Yet if Jack has the appearance of having a parent, she will be satisfied.  “I would strongly advise you, Mr Worthing, … to make a definite effort to produce at any rate one parent, of either sex, before the season is quite over.”(48)  This shows how much weight is put on appearances, because even the appearance of having a parent if plenty good enough as a judge of character.</p>
+    <p>  Another place in the book where this is shown is when Jack is talking to Lady Bracknell after Algernon was engaged to Cecily.  She uses the fact that Mr Cardew had three addresses to judge his character.  Lady Bracknell also views the fact that the Markby’s go to dinner parties as something that makes them more reliable than a legal publication.  “Indeed I am told that one of the Mr Markby’s is occasionally te be seen at dinner parties.  So far  am satisfied.”(97)</p>
+  </div>
+
 </body>
 </html>
