--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <div class="menubar">
     <ul>
-      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project">Home</a></li>
-      <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/appearance">Importance of Appearances</a></li>
+      <li id="home"><a href="https://ben-klemp.github.io/IoBE_Final_Project">Home</a></li>
+      <li><a href="./appearance/index.html">Importance of Appearances</a></li>
       <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/family">Importance of Family History</a></li>
       <li><a href="https://ben-klemp.github.io/IoBE_Final_Project/hypocrisy">Hypocrisy in Society</a></li>
+      <!-- https://ben-klemp.github.io/IoBE_Final_Project/appearance -->
     </ul>
   </div>
 
