Made all same style

--- a/family/index.html
+++ b/family/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>World Literature - IoBE Final Project</title>
-  <link rel="stylesheet" type="text/css" href="style2.css"/>
-  <script src="script.js"></script>
+  <title>Importance of Family History</title>
+  <link rel="stylesheet" type="text/css" href="../style2.css"/>
 </head>
 
 <body>
+
   <div class="menubar">
     <ul>
       <li id="home"><a href="https://ben-klemp.github.io/IoBE_Final_Project">Home</a></li>
@@ -18,8 +18,9 @@
 
   <div class="content">
     <br>
-    <h2 class="centered">World Literature - IoBE Final Project</h2>
+    <h2 class="centered">Importance of Family History</h2>
     <br>
   </div>
+
 </body>
 </html>
