Added content to main page (3/4)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 
   <div class="content">
     <br>
-    <h2 class="centered">World Literature - IoBE Final Project</h2>
+    <h1 class="centered">World Literature - IoBE Final Project</h1>
     <br>
+    <p class="summary">Importance of Being Earnest is a play written by Oscar Wilde.  This play is a farce that pokes fun of the society of the time.  It is very satirical and portrays many humorous interactions between the characters.  This play follows Jack Worthing and Algernon as they both seek marriage.  However, both of them do this under the name of Ernest, causing confusion and contributing to the humorous nature of the play.  This leads into the end, where Jack’s original identity is found out, and the name Ernest again contributes to the satirical nature of the play.</p>
+    <br>
+    <p class="summary">This play shows a few points about the society of the time.  The importance put on appearances is a common theme throughout the book, and the importance of family history is also mentioned.  The general hypocrisy of everything is also portrayed, often through logical faults or contradictions in dialogue.</p>
   </div>
 </body>
 </html>
