Added hypocrisy page (4/4)

--- a/hypocrisy/index.html
+++ b/hypocrisy/index.html
@@ -20,6 +20,14 @@
     <br>
     <h2 class="centered">Hypocrisy in Society</h2>
     <br>
+    <p>  There are many instances of hypocritical and logically flawed statements throughout the play.  One of these is when Algernon states that “if one plays good music, people don’t listen, and if one plays bad music people don’t talk.” (40)  Usually the exact opposite is the case, but Algernon doesn’t care enough to find his hypocrisy.</p>
+    <p>  Another, more humorous, example comes from a conversation between Jack and Algernon about fools:</p>
+    <p>“Jack: I am sick to death of cleverness.  Everybody is clever nowadays.  You can’t go anywhere without meeting clever people.  The thing has become an absolute public nuisance.  I wish to goodness we had a few fools left.</p>
+    <p>Algernon: We have</p>
+    <p>Jack: I should extremely like to meet them.  What do they talk about?</p>
+    <p>Algernon: The fools?  Oh! about the clever people, of course.</p>
+    <p>Jack: What fools.” (50)</p>
+    <p>Through this conversation, they end up calling themselves foolish without realizing it.  This gives us another example of the hypocrisy in this society.</p>
   </div>
 
 </body>
